# mono

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .release-please-manifest.json  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mise.toml  package.json  pnpm-lock.yaml  release-please-config.json  tsconfig.json  turbo.json
.devcontainer/: Dockerfile  devcontainer.json  tooling.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: _rust-service-test.yaml  _update-infra.yaml  ci.yml  codeql.yml  dependabot-automerge.yaml  dependency-review.yaml  deploy.yml  gitleaks.yaml  mainsite-api-build.yaml  mainsite-api-promote-prod.yaml  mainsite-api-test.yaml  mainsite-web-deploy.yaml  mainsite-web-test.yaml  npm-audit.yaml  portal-api-build.yaml  portal-api-promote-prod.yaml  portal-api-security.yaml  portal-api-test.yaml  portal-web-deploy.yaml  portal-web-test.yaml  pr-title.yml  protect-main.yml  release-please.yaml  scorecard.yml  secret-scan.yaml  tv-engine-build.yaml  tv-engine-test.yaml  tv-packager-build.yaml  tv-web-deploy.yaml  tv-web-test.yaml  website-api-build.yaml  website-api-promote-prod.yaml  website-api-test.yaml  website-web-test.yaml
.husky/: pre-commit
apps/mainsite/api/: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile
apps/mainsite/api/migrations/: 0001_init.sql
apps/mainsite/api/src/: main.rs
apps/mainsite/studio/: README.md  package.json  sanity.cli.ts  sanity.config.ts
apps/mainsite/studio/schemas/: event.ts  index.ts  post.ts  teamMember.ts
apps/mainsite/web/: CHANGELOG.md  README.md  package.json  vitest.config.ts
apps/mainsite/web/app/: globals.css  page.tsx
apps/mainsite/web/app/about/: page.tsx
apps/mainsite/web/app/blog/: page.tsx
apps/mainsite/web/app/contact/: page.tsx
apps/mainsite/web/app/events/: page.tsx
apps/mainsite/web/app/projects/: page.tsx
apps/mainsite/web/app/team/: page.tsx
apps/mainsite/web/components/: About.tsx  EmptyState.tsx  Footer.tsx  FourPillars.tsx  Hero.tsx  LeadershipSection.tsx  MetricsStrip.tsx  Navbar.tsx  PageHeader.tsx  PostBody.tsx  RevealText.tsx  SectionTitle.tsx  SocialIcons.tsx  StarFounderCard.tsx  StarsFounders.tsx  VideoBlock.tsx
apps/mainsite/web/lib/: cms.ts  dates.ts  media.ts  site.ts
apps/mainsite/web/test/: cms.test.ts  dates.test.ts  setup.ts
apps/mainsite/web/test/components/: footer.test.tsx  hero.test.tsx  home-sections.test.tsx  navbar.test.tsx  pillars-founders.test.tsx  post-body.test.tsx  primitives.test.tsx
apps/mainsite/web/test/pages/: blog-pages.test.tsx  events-page.test.tsx  home-page.test.tsx  (+2 more)
apps/portal/api/: .env.example  CHANGELOG.md  Cargo.toml  Dockerfile  deny.toml
apps/portal/api/migrations/: 0002_members.sql  0003_auth.sql
apps/portal/api/src/: db.rs  email.rs  error.rs  lib.rs  main.rs  rate_limit.rs  router.rs  state.rs  token.rs
apps/portal/api/src/auth/: extract.rs  handlers.rs  magic.rs  mod.rs  oidc.rs  session.rs
apps/portal/api/src/members/: handlers.rs  mod.rs  model.rs  repo.rs  validate.rs
apps/portal/api/tests/: auth.rs  integration.rs  members_me.rs  rate_limit.rs
apps/portal/web/: .env.example  .prettierignore  CHANGELOG.md  README.md  package.json  vitest.config.ts
apps/portal/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/portal/web/components/: FormFields.tsx  JoinForm.tsx  ProfileForm.tsx  SessionError.tsx  SiteHeader.tsx  StatusBadge.tsx
apps/portal/web/lib/: departments.ts  session.tsx
apps/tv/engine/: CHANGELOG.md  Dockerfile  README.md  eslint.config.mjs  package.json  tsconfig.json
apps/tv/engine/src/: assetManager.ts  channelManager.ts  index.ts  sanity.ts  streamSwitchManager.ts
apps/tv/engine/test/: sanity.test.ts  smoke.test.ts  tsconfig.json
apps/tv/packager/: CHANGELOG.md  Dockerfile  README.md  package.sh
apps/tv/studio/: README.md  package.json  sanity.cli.ts  sanity.config.ts  tsconfig.json
apps/tv/studio/schemas/: index.ts  scheduleSlot.ts  show.ts  vodAsset.ts
apps/tv/web/: CHANGELOG.md  README.md  package.json
apps/tv/web/app/: layout.tsx  page.tsx
apps/tv/web/components/: Player.tsx
apps/tv/web/lib/: schedule.ts
apps/tv/web/test/: smoke.test.ts
apps/web/: package.json  tsconfig.json
apps/website/api/: .env.example  CHANGELOG.md  Cargo.toml  Dockerfile  deny.toml
apps/website/api/.cargo/: audit.toml
apps/website/api/tests/: integration.rs
apps/website/web/: .prettierignore  CHANGELOG.md  eslint.config.mjs  next.config.ts  package.json  tsconfig.json
apps/website/web/app/: layout 2.tsx  layout.tsx  page 2.tsx  providers.tsx
apps/website/web/components/: Footer.tsx  JoinForm 2.tsx  JoinForm.tsx  MissionVision 2.tsx  Navbar.tsx  ObjectivesList.tsx  PillarCard.tsx  ScrambleText 2.tsx
apps/website/web/convex/: applications.ts  schema.ts
apps/website/web/test/: smoke.test.ts
docs/: cicd-pipeline.md  entra-identity.md  glossary.md  infra-repo-spec.md  onboarding.md  project-structure.md  tv-architecture.md
iac/: README.md
iac/azure/: README.md
iac/azure/bicep/: main.bicep  main.bicepparam
iac/azure/bicep/modules/: swa.bicep
iac/azure/entra/: README.md
infra/: README.md
infra/bicep/: main.bicep  main.bicepparam
infra/bicep/modules/: swa.bicep
scripts/: setup  setup_project
scripts/ci/: patch-bicepparam.sh  read-bicepparam-tag.sh  required-gate.sh
(+21 files in other folders)
