[package]
name = "mainsite-api"
version = "0.2.1"
edition = "2021"
description = "Vesper P4 backend API"
license = "MIT"
publish = false

[[bin]]
name = "mainsite-api"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls-ring",
    "postgres",
    "migrate",
    "macros",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
strip = true
lto = "thin"
