[package]
name = "portal-api"
version = "0.4.0"
edition = "2021"
description = "Vesper P4 backend API"
license = "MIT"
publish = false

# Library target holds the app modules so integration tests can call them
# directly; the binary is a thin bootstrap over it.
[lib]
name = "portal_api"
path = "src/lib.rs"

[[bin]]
name = "portal-api"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
azure_core = "1.0.0"
azure_identity = "1.0.0"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.9", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls-ring",
    "postgres",
    "migrate",
    "macros",
    "uuid",
    "chrono",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tower-http = { version = "0.6", features = ["cors", "limit", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
strip = true
lto = "thin"
