[package]
name = "portal-api"
version = "0.8.3"
edition = "2021"
description = "Vesper P4 backend API"
license = "MIT"
publish = false

# Library target holds the app modules so integration tests can call them
# directly; the binary is a thin bootstrap over it.
[lib]
name = "portal_api"
path = "src/lib.rs"

[[bin]]
name = "portal-api"
path = "src/main.rs"

[dependencies]
anyhow = "1"
arc-swap = "1.9.1"
async-trait = "0.1"
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
azure_core = "1.0.0"
azure_identity = "1.0.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
# 10.x makes the crypto backend an explicit choice: aws_lc_rs over rust_crypto
# because aws-lc is already in the tree (via the Azure SDK) and rust_crypto
# would add the `rsa` crate, whose Marvin advisory (RUSTSEC-2023-0071) has no
# fix. default-features off drops PEM support we don't use (JWKS components).
jsonwebtoken = { version = "10.3", default-features = false, features = ["aws_lc_rs"] }
rand = "0.8"
# default-features off to drop the OpenSSL-backed default TLS; rustls matches the
# distroless runtime (no system OpenSSL) and the ring backend sqlx already uses.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.9", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls-ring",
    "postgres",
    "migrate",
    "macros",
    "uuid",
    "chrono",
] }
# The `cookie` crate under axum-extra speaks `time` (not `chrono`) for Max-Age.
time = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "sync"] }
tower-http = { version = "0.6", features = ["cors", "limit", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
# tower (util) + http-body-util drive the router in-process in the HTTP-level
# integration tests (tests/members_me.rs). Both are already in the tree as
# axum dependencies — no new crates in the lockfile.
http-body-util = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }

[profile.release]
strip = true
lto = "thin"
